Improve SchemaServiceImpl testing
Fix https://github.com/Hyperfoil/Horreum/issues/1592

- revert message bus Enum